# property_mate

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  Ref.md  todo.md
apps/backend/: Dockerfile  ToDo.md  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/core/: config.py  database.py  email.py  exceptions.py  logging.py  metrics.py  middleware.py  opensearch.py  rabbitmq.py  redis.py  s3.py
apps/backend/app/dependencies/: auth.py  pagination.py  redis.py
apps/backend/app/models/: ai_conversation.py  app_waitlist.py  asset.py  audit_log.py  cctv.py  deposit_deduction.py  framework.py  inspection_report.py  installed_app.py  inventory.py  invoice.py  job_run.py  lease.py  lease_template.py  ledger_entry.py  maintenance_ticket.py  meter_reading.py  move_out.py  onboarding.py  org.py  payment.py  property.py  stock_shipment.py  store.py  ticket.py  unit.py  user.py  user_mfa.py  vendor_application.py  vendor_contract.py  vendor_listing.py  vendor_profile.py  whatsapp_event.py  whatsapp_instance.py
apps/backend/app/repositories/: ai_conversation_repository.py  asset_repository.py  audit_log_repository.py  cctv_repository.py  deduction_repository.py  framework_repository.py  inspection_repository.py  installed_app_repository.py  inventory_repository.py  invoice_repository.py  job_run_repository.py  lease_repository.py  lease_template_repository.py  ledger_repository.py  maintenance_ticket_repository.py  meter_reading_repository.py  mfa_repository.py  move_out_repository.py  onboarding_repository.py  org_repository.py  payment_repository.py  property_repository.py  store_repository.py  ticket_repository.py  unit_repository.py  user_repository.py  vendor_repository.py  whatsapp_event_repository.py  whatsapp_instance_repository.py
apps/backend/app/schemas/: accounting.py  asset.py  auth.py  base.py  cctv.py  dashboard.py  deduction.py  framework.py  inspection.py  inventory.py  invoice.py  lease.py  lease_template.py  meter_reading.py  mfa.py  move_out.py  onboarding.py  org.py  payment.py  property.py  store.py  tenant.py  ticket.py  unit.py  vendor.py
apps/backend/app/services/: accounting_service.py  ai_service.py  asset_service.py  auth_service.py  billing_service.py  cctv_service.py  dashboard_service.py  deduction_service.py  framework_service.py  gen_ticket_service.py  inspection_service.py  inventory_service.py  invoice_pdf_service.py  invoice_service.py  late_fee_service.py  lease_service.py  lease_template_service.py  mfa_service.py  move_out_service.py  payment_service.py  property_service.py  shipment_pdf_service.py  shipment_service.py  store_service.py  tenant_service.py  ticket_service.py  unit_service.py  vendor_portal_service.py  vendor_service.py  whatsapp_service.py  ws_notification_service.py
apps/backend/app/utils/: datetime.py  encryption.py  mpesa.py  objectid.py  pdf.py  totp_util.py
apps/backend/scripts/: seed_lease_reference_no.py
apps/backend/tests/: conftest.py  readme.md
apps/backend/tests/api/: conftest.py  test_billing_e2e_api.py
apps/backend/tests/integration/: test_auth.py  test_billing_seed.py  test_health.py  test_leases.py  test_properties.py  test_units.py
apps/backend/tests/seed/: seed.py
apps/backend/tests/unit/: test_auth_service.py  test_property_service.py
apps/iot/: .env.example  .env_  Dockerfile  README.MD  pyproject.toml
apps/iot/app/: main.py
apps/iot/app/core/: config.py  database.py  exceptions.py  logging.py  metrics.py  middleware.py  rabbitmq.py  redis.py
apps/iot/app/dependencies/: auth.py  internal_auth.py
apps/iot/app/models/: alert_rule.py  device.py  device_command.py  device_group.py  device_type.py  edge_gateway.py  ota_update.py  ssh_access_request.py  ssh_audit_log.py
apps/iot/app/services/: alert_rule_service.py  ca_service.py  cert_monitor_service.py  connectivity.py  emqx_auth_service.py  fleet_service.py  headscale_client.py  heartbeat_service.py  iot_email.py  mqtt_subscriber.py  ota_service.py  pms_event_publisher.py  (+4 more)
apps/worker/: Dockerfile  pyproject.toml
apps/worker/app/: main.py
claude-plugins/mldock/: .mcp.json  CLAUDE.md  README.md  pyproject.toml
claude-plugins/mldock/.claude-plugin/: plugin.json
claude-plugins/mldock/mcp_server/: auth.py  client.py  constants.py  server.py
claude-plugins/mldock/skills/: build-trainer.md  mldock-login.md  upload-trainer.md
(+762 files in other folders)
