[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "pms-worker"
version = "0.1.0"
description = "PMS RabbitMQ Worker Service"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.0",
    "motor>=3.6.0",
    "beanie>=1.27.0",
    "redis[asyncio]>=5.2.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "opentelemetry-sdk>=1.28.0",
    "apscheduler>=3.10.0",
    "opensearch-py>=2.3.0",
    "aiohttp",
    "httpx >=0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
