[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mldock-claude-plugin"
version = "1.0.0"
description = "Claude Code MCP plugin for the MLDock ML training platform"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mldock-mcp = "mcp_server.server:main_sync"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]
